[package]
name = "game_2048_view"
version = "0.1.1"
authors = ["Johan Ullén <johan.ullen@sentian.ai>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.sdl2]
version = "0.33.0"
default_features = true
features = ["ttf"]